# github

./: .gitignore  CODE_QUALITY_VERIFICATION.md  CODE_REVIEW_FULL_SCAN.md  IMPROVEMENTS_APPLIED.md  LIVE_SESSION_OBSERVATION.md  PHASE7_INTEGRITY_REPORT.md  PHASE8_NEW_SESSION_PROMPT.md  PHASE8_QUICK_REF.md  PHASE8_SESSION_INIT.md  PHASE8_STARTUP.md  PHASE8_WEEK1_COMPLETE.md  PROGRESS.md  QUICKSTART.md  STL_IMPORT_GUIDE.md  STL_QUICK_REF.md  VFEP_IMPROVEMENTS_FINAL.md  VFEP_SIMULATION_OVERVIEW.md  create_test_stl.py  demo_verification.py  equipment.stl  imgui.ini  launch_all.sh  rack.stl  readme.md  room.stl  run_vfep.bat  test_cube.stl
cpp_engine/: CMakeLists.txt  launch_all.bat  launch_all.sh  quick_build.ps1
cpp_engine/include/: SensitivityAnalysis.h  Simulation.h  UncertaintyQuantification.h
cpp_engine/src/: SensitivityAnalysis.cpp  Simulation.cpp  UncertaintyQuantification.cpp  ValidationSuite.cpp
cpp_engine/tests/: TestNumericIntegrity.cpp
cpp_engine/tools/: SweepTool.cpp
cpp_engine/vis/: main_vis.cpp  stb_image.h
cpp_engine/world/: ceiling_rail.cpp  ceiling_rail.h  rail_mounted_nozzle.cpp
